style.css
/* ... */
.retirement {
  content: url('./assets/lifeline@3x.png');
  width: 300px;
  margin-top: -157px;
  margin-left: 649px;
}

.rrs-text {
  position: relative;
  margin-top: 169px;
  /*  margin-left: 800px; */
  width: 300px;
}

/* GOLDEN WEDDING */
.section-goldenwedding {
  display: flex;
  flex-direction: column;
}

.goldenwedding {
  width: 1391px;
  height: 1523px;
  margin-top: -200px;
  margin-left: 50px;
}

.gws-text {
  position: relative;
  margin-top: 36px;
  margin-left: 300px;
}

/* DEATH */
.section-twentynineteen {
  display: flex;
  flex-direction: column;
}

.twentynineteen {
  margin-top: 350px;
  width: 1286px;
  height: 737px;
}

.tns-text {
  position: relative;
  margin-top: -546px;
  margin-left: 980px;
  width: 300px;
}

/* FOOTER */
.menu {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 620px;
  /* z-index: 0; */
}

.pages {
  display: flex;
  position: absolute;
  bottom: 15px;
}

.navbook {
  width: 80vw;
  margin-bottom: 0px;
  margin-left: -4vmin;
  z-index: 2;
}

.milestones {
  margin: -3vmin 0 0 5vmin;
}

.stories {
  margin: 1vmin 0 0 -3vmin;
  z-index: 1;
}

.gallery {
  margin: -4vmin 0 0 -6vmin;
}

.my-granny {
  margin: 1vmin 0 0 -3vmin;
  z-index: 1;
}

.remember {
  margin: -4vmin 0 0 -6vmin;
}

.map {
  margin: 1.5vmin 0 0 -4vmin;
  z-index: 1;
}

.nanas-words {
  margin: -3vmin 0 0 -3vmin;
}

.pages img {
  width: 12vw;
  height: auto;

  transition: transform 0.3s ease-in-out;
  transform: translateY(0rem);
}

.pages img:hover {
  cursor: pointer;
  width: 12vw;
  transform: translateY(-1rem);
  /* transform: translate(0, -5%);
  transition: 0.3s; */
}

/* 
  EXTRAS
 
  these extra images are created with background instead of the image element because
  we are not displaying these images on mobile and we don't want to also trigger 
  a request to those images when they are hidden on mobile. 
  
  So this solution allows us to show the images on the right viewport and also trigger the images request
  when we need it.
*/
.chamomille {
  position: relative;
  width: 445.95px;
  height: 462px;
  margin-top: -700px;
  margin-bottom: 250px;
  align-self: flex-end;
  /* margin-right: -250px; */
  right: -507px;
  z-index: 1;
  transform: translateX(20%);
}

.chamomille-image,
.ball-toy-image,
.passport-image,
.lottery-ticket-image {
  width: 100%;
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
}
.chamomille-image {
  background-image: url('./assets/daisy.png');
}

.ball-toy {
  position: relative;
  margin-top: -600px;
  margin-bottom: -450px;
  right: 800px;
  width: 884px;
  height: 1046px;
  z-index: 0;
  transform: translateX(-10%);
}

.ball-toy-image {
  background-image: url('./assets/ball_toy.webp');
}

.passport {
  position: absolute;
  width: 750px;
  height: 798px;
  margin-top: -283px;
  left: 1100px;
  transform: translateX(20%);
}

.passport-image {
  background-image: url('./assets/passport.webp');
}

.lottery-ticket {
  position: relative;
  width: 1038px;
  height: 1264px;
  margin-top: -1800px;
  right: 870px;
  transform: translateX(-10%);
}

.lottery-ticket-image {
  background-image: url('https://felipeceballos-696179685.imgix.net/assets/lotterynew.png?fm=webp&h=1001&w=850');
  /*  background-image: url('https://felipeceballos-696179685.imgix.net/assets/lottery.png?fm=webp&h=1264&w=1038'); */
  width: 1038px;
  height: 1264px;
}

.scroll-active-left {
  animation: 1s linear 0s forwards slideLeft;
}

.scroll-active-right {
  animation: 1s linear 0s forwards slideRight;
}

@keyframes slideRight {
  from {
    transform: translateX(20%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideLeft {
  from {
    transform: translateX(-10%);
  }
  to {
    transform: translateX(0);
  }
}

/* Media Queries */
@media only screen and (max-width: 500px) {
  .rrs-text h2 {
    bottom: 173vmin !important;
  }

  .page-section .section-daughters {
    margin-top: -57vmin;
  }
}

@media only screen and (orientation: landscape) and (max-width: 800px) {
  .rrs-text h2 {
    bottom: 144vmin !important;
    font-size: 5vw !important;
  }

  .rrs-text p {
    font-size: 2.9vw !important;
  }

  .page-section .section-daughters {
    margin-top: -13rem;
  }
}
/* ... */

